# ngin

./: .gitignore  CMakeLists.txt  README.md  initialize-build.cmd  run-cmake.cmd  run-ninja-debug.cmd  run-ninja-release.cmd
cmake/: ngin-find-tools.cmake  ngin-functions.cmake
cmake/toolchains/: cc65-toolchain.cmake
extras/map-data-converter/: map-data-converter.py
extras/notepadpp-highlight/: ngin-6502.xml  userDefineLang.xml
extras/ppu-dump-sprite-extractor/: ppu-dump-sprite-extractor.py
include/ngin/: alloc.inc  arithmetic.inc  ascii.inc  assert.inc  branch.inc  build-log.inc  camera.inc  collision.inc  config.in.inc  controller.inc  core.inc  debug-draw.inc  debug.inc  lfsr8.inc  log.inc  map-collision.inc  map-data.inc  map-scroller.inc  memory.inc  ngin-muse.inc  ngin.inc  nmi.inc  object-spawner.inc  object.inc  ppu-buffer.inc  ppu.inc  shadow-oam.inc  sprite-animator.inc  sprite-renderer.inc  util.inc
include/ngin/lua/: lua.inc
include/ngin/lua/ndx/: ndxdebug.inc
include/ngin/mapper/: fme-7.inc  nrom.inc
samples/: CMakeLists.txt
samples/basic/: CMakeLists.txt  basic.s
samples/basic-fme-7/: CMakeLists.txt  basic-fme-7.s
samples/collision/: CMakeLists.txt  collision.s
samples/controller/: CMakeLists.txt  controller.s
samples/dumped-sprites/: CMakeLists.txt  dumped-sprites.s
samples/dumped-sprites/data/: CMakeLists.txt  dump.ppumem
samples/empty/: CMakeLists.txt  empty.s
samples/imported-sprite/: CMakeLists.txt  imported-sprite.s
samples/log/: CMakeLists.txt  log.s
samples/lua/: CMakeLists.txt  lua.s
samples/map/: CMakeLists.txt  map.s  smb3-map.s  test-map.s
samples/map-collision/: CMakeLists.txt  map-attributes.inc  map-collision.s
samples/map-collision/assets/: CMakeLists.txt  collision-test.tmx
samples/map/assets/: CMakeLists.txt  level1.tmx  level2.tmx
samples/map/assets/tiles/: screen-grid.tsx  tileset.tsx
samples/map/data/: smb3.att  smb3.chr  smb3.met
samples/msp-import/: CMakeLists.txt  msp-import.s
samples/msp-import/data/: sprites.chr  sprites.msp
samples/nametable/: CMakeLists.txt  nametable.s
samples/nametable/data/: startropics.chr  startropics.nam  startropics.pal
samples/object-spawner/: CMakeLists.txt  object-spawner.s
samples/object-spawner/assets/: CMakeLists.txt  object-spawner.tmx
samples/objects/: CMakeLists.txt  object-ball.inc  object-ball.s  objects.s
samples/objects/assets/: CMakeLists.txt  objects.tmx
samples/platformer/: CMakeLists.txt  common.inc  object-ball.inc  object-ball.s  object-player.inc  object-player.s  platformer.s
samples/platformer/assets/: CMakeLists.txt
samples/platformer/assets/maps/: CMakeLists.txt  level1.tmx  vilenes.tmx
samples/platformer/assets/sprites/: CMakeLists.txt
samples/ppu-upload/: CMakeLists.txt  ppu-upload.s
samples/sound/: CMakeLists.txt  sound.s
samples/sound/sound/: break.pom  checkpoint.pom  ninja-song.pom  test-song.pom
samples/sprite/: CMakeLists.txt  sprite.s
samples/sprite-animation/: CMakeLists.txt  sprite-animation.s
src/ngin/: CMakeLists.txt  alloc.lua  alloc.s  assert.lua  assert.s  build-log.s  camera.s  collision.s  config.in.lua  config.in.s  force-import.s  force-segment.s  ines-header.s  irq.s  lfsr8.s  linker-config-dummy.s  log.lua  log.s  map-collision.lua  map-collision.s  map-data.lua  map-data.s  map-scroller.lua  map-scroller.s  memory.s  nmi-private.inc  nmi.s  object-spawner.lua  object-spawner.s  object.s  ppu-buffer.s  ppu.s  reset-private.inc  reset.s  shadow-oam.s  sprite-animator.s  sprite-renderer.s  vectors.s
src/ngin/controller/: blargg-read-joy.inc  controller-common.inc  controller-common.s  controller1.s  controller2.s
src/ngin/core/: ines-header.s  reset.inc
src/ngin/debug/: upload-debug-palette.s
src/ngin/linker/: nrom.cfg
src/ngin/lua/: debug-draw.lua  reset.lua  ui.lua
src/ngin/mapper/: fme-7.s  nrom.s
src/ngin/memory/: copy-memory-to-port.s  copy-memory.s  copy-port-to-memory.s  copy-port.s  fill-memory.s  fill-port.s  generic-copy.inc
src/ngin/sound/: ngin-muse.s
src/ngin/sound/muse/: muse-ca65.inc  muse.inc  muse.s
tools/common/: common.py  nes_palette.py
tools/linker-configurer/: linker-configurer.py
tools/msp-importer/: msp-importer.py
tools/musetracker-importer/: musetracker-importer.py
tools/palette-importer/: palette-importer.py
tools/sprite-importer/: sprite-importer.py
tools/tiled-map-importer/: tiled-map-importer.py
