add_subdirectory( basic )
add_subdirectory( sprite )
add_subdirectory( nametable )
add_subdirectory( ppu-upload )
add_subdirectory( dumped-sprites )
add_subdirectory( empty )
add_subdirectory( controller )
add_subdirectory( collision )
add_subdirectory( lua )
add_subdirectory( map )
add_subdirectory( map-collision )
add_subdirectory( objects )
add_subdirectory( object-spawner )
