# \todo Maybe can be removed if it has nothing extra to do besides addExecutable.
# \todo Rename to __ngin_addSample (internal use only)
function( ngin_addSample name )
    ngin_addExecutable( ${name} ${ARGN} )
endfunction()

add_subdirectory( basic )
add_subdirectory( sprite )
add_subdirectory( nametable )
add_subdirectory( ppu-upload )
add_subdirectory( dumped-sprites )
add_subdirectory( empty )
add_subdirectory( controller )
add_subdirectory( collision )
add_subdirectory( lua )
add_subdirectory( map )
add_subdirectory( map-collision )
add_subdirectory( objects )
add_subdirectory( object-spawner )
add_subdirectory( imported-sprite )
add_subdirectory( sprite-animation )
add_subdirectory( platformer )
add_subdirectory( log )
add_subdirectory( sound )
add_subdirectory( basic-fme-7 )
add_subdirectory( msp-import )
